# Todo-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260106_0001_001_phase_v_schema.py
app/: __init__.py  config.py  main.py
app/api/: auth.py  chat.py  deps.py  tags.py  tasks.py
app/db/: session.py
app/events/: __init__.py  consumers.py  publisher.py  types.py
app/mcp/: __init__.py  tools.py
app/models/: __init__.py  audit_log.py  conversation.py  message.py  notification.py  reminder.py  tag.py  task.py  task_event.py  user.py
app/services/: __init__.py  ai_insights.py  auth.py  chat.py  conversation.py  events.py  reminders.py  tags.py  tasks.py
app/workers/: __init__.py  ai_executor.py  base.py  event_worker.py  notification_worker.py  reminder_worker.py  runner.py
scripts/: run_workers.py
tests/: test_event_consumers.py  test_workers.py
